# ad-campaign-assistant

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
src/ad_assistant/: __init__.py  cli.py  google_ads.py  planner.py  serpapi.py  settings.py  utils.py
