[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ad-campaign-assistant"
version = "0.1.0"
description = "Local containerized Google Ads management assistant with plan/apply CLI commands."
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.111.0,<0.112.0",
    "google-ads>=31.0.0,<32.0.0",
    "python-dotenv>=1.0.1,<2.0.0",
    "requests>=2.32.0,<3.0.0",
]

[project.scripts]
ads-assistant = "ad_assistant.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

